--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="clear diptych ptych-flipped">
       <div class="quote ptych-right">
 
-        <p><a href="canon/" title="Animat Habitat boutique.">Boutique</a></p>
+        <p><a href="boutique/" title="Animat Habitat boutique.">Boutique</a></p>
         <p class="lineend small"><font class="en">Art shop at Animat Habitat.</font><font class="fr">Boutique d'art chez Animat Habitat.</font></p>
 
         <pre class="thin"></pre>
