--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -55,59 +55,59 @@
       <ul class="product polyptych">
         <li class="post-1510 product-vignette">
 
-          <a href="isilo/">
+          <a href="last-of-the-big-tuskers/isilo/">
             <div class="clear">
               <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
 
             </div>
           </a>
 
-          <a href="isilo/"><h5 class="product-title">Isilo</h5></a>
+          <a href="last-of-the-big-tuskers/isilo/"><h5 class="product-title">Isilo</h5></a>
           <h5 class="product-description"><font class="en">Tembe Elephant Park, South Africa</font><font class="fr">Parc des éléphants de Tembe, Afrique du Sud</font></h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
 
         </li>
 
         <!-- <li class="post-1505 product-vignette">
-          <a href="kamboyo/">
+          <a href="last-of-the-big-tuskers/kamboyo/">
             <div class="clear">
               <img alt="Last of the Big Tuskers, 2018 &ndash; Kamboyo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" />
             </div></a>
-          <a href="kamboyo/"><h5 class="product-title">Kamboyo</h5></a>
+          <a href="last-of-the-big-tuskers/kamboyo/"><h5 class="product-title">Kamboyo</h5></a>
           <h5 class="product-description"><font class="en">Tsavo Conservation Area</font><font class="fr">Zone de conservation de Tsavo</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
         </li> -->
 
         <!-- <li class="post-1507 product-vignette">
-          <a href="masthulele/">
+          <a href="last-of-the-big-tuskers/masthulele/">
             <div class="clear">
               <img alt="Last of the Big Tuskers, 2018 &ndash; Masthulele vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" />
             </div></a>
-          <a href="masthulele/"><h5 class="product-title">Masthulele</h5></a>
+          <a href="last-of-the-big-tuskers/masthulele/"><h5 class="product-title">Masthulele</h5></a>
           <h5 class="product-description"><font class="en">Kruger National Park, South Africa</font><font class="fr">Parc national Kruger, Afrique du Sud</font></h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
         </li> -->
 
         <!-- <li class="post-1508 product-vignette">
-          <a href="one-ton/">
+          <a href="last-of-the-big-tuskers/one-ton/">
             <div class="clear">
               <img alt="Last of the Big Tuskers, 2018 &ndash; One Ton vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" />
             </div></a>
-          <a href="one-ton/"><h5 class="product-title">One Ton</h5></a>
+          <a href="last-of-the-big-tuskers/one-ton/"><h5 class="product-title">One Ton</h5></a>
           <h5 class="product-description"><font class="en">Chyulu Hills National Park</font><font class="fr">Parc national de Chyulu Hills</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
         </li> -->
 
         <li class="post-1506 product-vignette">
 
-          <a href="satao/">
+          <a href="last-of-the-big-tuskers/satao/">
             <div class="clear">
               <img alt="Last of the Big Tuskers, 2018 &ndash; Satao vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
 
             </div>
           </a>
 
-          <a href="satao/"><h5 class="product-title">Satao</h5></a>
+          <a href="last-of-the-big-tuskers/satao/"><h5 class="product-title">Satao</h5></a>
           <h5 class="product-description"><font class="en">Tsavo East National Park</font><font class="fr">Parc national de Tsavo Est</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
 
@@ -115,7 +115,7 @@
 
         <li class="post-1509 product-vignette">
 
-          <a href="tim-and-craig/">
+          <a href="last-of-the-big-tuskers/tim-and-craig/">
             <div class="clear">
               <div class="gutter-small">
                 <img alt="Last of the Big Tuskers, 2018 &ndash; Tim vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.180.jpg" />
@@ -127,7 +127,7 @@
             </div>
           </a>
 
-          <a href="tim-and-craig/"><h5 class="product-title">Tim &amp; Craig</h5></a>
+          <a href="last-of-the-big-tuskers/tim-and-craig/"><h5 class="product-title">Tim &amp; Craig</h5></a>
           <h5 class="product-description"><font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya</h5>
           <h5 class="product-tag"><i>Last of the Big Tuskers</i></h5>
 
