--- a/boutique/medium/giclee/last-of-the-big-tuskers/isilo/index.html
+++ b/boutique/medium/giclee/last-of-the-big-tuskers/isilo/index.html
@@ -14,9 +14,9 @@
   <title>Animat Habitat boutique. Giclée. Last of the Big Tuskers &ndash;&nbsp;Isilo, 2018.</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../../../../inc/css/dark.light.unicorn.css" />
+  <link rel="stylesheet" href="../../../../../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../../../../inc/ico/animat.mark.1.1.72.light.png" />
+  <link rel="icon" href="../../../../../inc/ico/animat.mark.1.1.72.light.png" />
 
 </head>
 
@@ -24,9 +24,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
-      <li class="crumb"><a href="../../../" title="Animat Habitat boutique.">Boutique</a></li>
-      <li class="crumb"><a href="../" title="Animat Habitat boutique. Giclée.">Giclée</a></li>
+      <li class="crumb logo"><a href="../../../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Light &copy; Animat Habitat, 2015" class="logo" src="../../../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb"><a href="../../../../" title="Animat Habitat boutique.">Boutique</a></li>
+      <li class="crumb"><a href="../../" title="Animat Habitat boutique. Giclée.">Giclée</a></li>
       <li class="crumb active"><a><i>Isilo</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
       <li class="right thin"><a class="title" onclick="toggle_currency();">
@@ -50,7 +50,7 @@
 
       <a onclick="toggle_preview();">
         <div class="text-center">
-          <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
+          <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo preview, aperçu." class="product-image" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
           <p class="linebreak"><i>Isilo</i> &ndash; <font class="en">Tembe Elephant Park, South Africa</font><font class="fr">Parc des éléphants de Tembe, Afrique du Sud</font> (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
 
         </div>
@@ -62,7 +62,7 @@
     <section class="single">
       <div class="clear-bottom">
         <a onclick="toggle_preview();">
-          <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." class="matte matte-fold" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
+          <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." class="matte matte-fold" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
 
         </a>
       </div>
@@ -164,8 +164,8 @@
 
           <p>Dimension: 18&nbsp;&times;&nbsp;12 <font class="en">in</font><font class="fr">po</font></p>
           <div class="clear small">
-            <p><font class="en">Matte:</font><font class="fr">Cache&nbsp;:</font> 0.5 <font class="en">in</font><font class="fr">po</font></p>
-            <p class="lineend"><font class="en">Print:</font><font class="fr">Impression&nbsp;:</font> 17&nbsp;&times;&nbsp;11 <font class="en">in</font><font class="fr">po</font></p>
+            <p><font class="en">Matte:</font><font class="fr">Cache&nbsp;:</font> 1 <font class="en">in</font><font class="fr">po</font></p>
+            <p class="lineend"><font class="en">Print:</font><font class="fr">Impression&nbsp;:</font> 16&nbsp;&times;&nbsp;10 <font class="en">in</font><font class="fr">po</font></p>
 
           </div>
 
@@ -223,7 +223,7 @@
   <footer class="single">
     <div class="quote">
       <p class="small"><sup>1</sup>&nbsp; <font class="en">Fifty (50) per cent of the purchase price is redirected to wildlife conservation projects in elephant range States in Africa in association with scene one at Animat Habitat.</font><font class="fr">Cinquante pour cent du prix d'achat est affecté à des projets de conservation de la nature dans les États de l'aire de répartition des éléphants en Afrique en association avec la première scène chez Animat Habitat.</font></p>
-      <p class="small"><sup>2</sup>&nbsp; <font class="en">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</font><font class="fr">L'expédition à l'extérieur du Canada est limitée aux pays répertoriés comme disponibles pour l'expédition international dans les <a href="../../c/terms-of-purchase/" target="_blank" title="Animat Habitat conditions d'achat.">conditions d'achat</a>.</font></p>
+      <p class="small"><sup>2</sup>&nbsp; <font class="en">International shipping is limited to countries listed as available for international shipping in the boutique <a href="../../../c/terms-of-purchase/" target="_blank" title="Animat Habitat terms of purchase.">Terms of Purchase</a>.</font><font class="fr">L'expédition à l'extérieur du Canada est limitée aux pays répertoriés comme disponibles pour l'expédition international dans les <a href="../../../c/terms-of-purchase/" target="_blank" title="Animat Habitat conditions d'achat.">conditions d'achat</a>.</font></p>
 
     </div>
   </footer>
