--- a/boutique/medium/1/index.html
+++ b/boutique/medium/1/index.html
@@ -59,7 +59,7 @@
 
           <a href="last-of-the-big-tuskers/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.300-180.jpg" />
 
             </div>
           </a>
