--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -57,7 +57,7 @@
 
           <a href="last-of-the-big-tuskers/isilo/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.300-180.jpg" />
 
             </div>
           </a>
@@ -71,7 +71,7 @@
         <!-- <li class="post-1505 product-vignette">
           <a href="last-of-the-big-tuskers/kamboyo/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Kamboyo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Kamboyo vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.300-180.jpg" />
             </div></a>
           <a href="last-of-the-big-tuskers/kamboyo/"><h5 class="product-title">Kamboyo</h5></a>
           <h5 class="product-description"><font class="en">Tsavo Conservation Area</font><font class="fr">Zone de conservation de Tsavo</font>, Kenya</h5>
@@ -81,7 +81,7 @@
         <!-- <li class="post-1507 product-vignette">
           <a href="last-of-the-big-tuskers/masthulele/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Masthulele vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Masthulele vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.300-180.jpg" />
             </div></a>
           <a href="last-of-the-big-tuskers/masthulele/"><h5 class="product-title">Masthulele</h5></a>
           <h5 class="product-description"><font class="en">Kruger National Park, South Africa</font><font class="fr">Parc national Kruger, Afrique du Sud</font></h5>
@@ -91,7 +91,7 @@
         <!-- <li class="post-1508 product-vignette">
           <a href="last-of-the-big-tuskers/one-ton/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; One Ton vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; One Ton vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.300-180.jpg" />
             </div></a>
           <a href="last-of-the-big-tuskers/one-ton/"><h5 class="product-title">One Ton</h5></a>
           <h5 class="product-description"><font class="en">Chyulu Hills National Park</font><font class="fr">Parc national de Chyulu Hills</font>, Kenya</h5>
@@ -102,7 +102,7 @@
 
           <a href="last-of-the-big-tuskers/satao/">
             <div class="clear">
-              <img alt="Last of the Big Tuskers, 2018 &ndash; Satao vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
+              <img alt="Last of the Big Tuskers, 2018 &ndash; Satao vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.300-180.jpg" />
 
             </div>
           </a>
