--- a/boutique/medium/giclee/last-of-the-big-tuskers/isilo/index.html
+++ b/boutique/medium/giclee/last-of-the-big-tuskers/isilo/index.html
@@ -51,7 +51,7 @@
       <a onclick="toggle_preview();">
         <div class="text-center">
           <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo preview, aperçu." class="product-image" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
-          <p class="linebreak"><i>Isilo</i> &ndash; <font class="en">Tembe Elephant Park, South Africa</font><font class="fr">Parc des éléphants de Tembe, Afrique du Sud</font> (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+          <p class="linebreak"><i>Isilo</i> &ndash; <font class="en">Tembe Elephant Park, South Africa</font><font class="fr">Parc des éléphants de Tembe, Afrique du Sud</font> (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
         </div>
       </a>
@@ -62,7 +62,7 @@
     <section class="single">
       <div class="clear-bottom">
         <a onclick="toggle_preview();">
-          <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." class="matte matte-fold" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" />
+          <img alt="Last of the Big Tuskers, 2018 &ndash; Isilo vignette." class="matte matte-fold" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.300-180.jpg" />
 
         </a>
       </div>
