--- a/boutique/medium/giclee/last-of-the-big-tuskers/satao/index.html
+++ b/boutique/medium/giclee/last-of-the-big-tuskers/satao/index.html
@@ -52,7 +52,7 @@
       <a onclick="toggle_preview();">
         <div class="text-center">
           <img alt="Last of the Big Tuskers, 2018 &ndash; Satao preview, aperçu." class="product-image" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
-          <p class="linebreak"><i>Satao</i> &ndash; <font class="en">Tsavo East National Park</font><font class="fr">Parc national de Tsavo Est</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+          <p class="linebreak"><i>Satao</i> &ndash; <font class="en">Tsavo East National Park</font><font class="fr">Parc national de Tsavo Est</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
         </div>
       </a>
@@ -63,7 +63,7 @@
     <section class="single">
       <div class="clear-bottom">
         <a onclick="toggle_preview();">
-          <img alt="Last of the Big Tuskers, 2018 &ndash; Satao vignette." class="matte matte-fold" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" />
+          <img alt="Last of the Big Tuskers, 2018 &ndash; Satao vignette." class="matte matte-fold" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.300-180.jpg" />
 
         </a>
       </div>
