--- a/boutique/medium/giclee/last-of-the-big-tuskers/tim-and-craig/index.html
+++ b/boutique/medium/giclee/last-of-the-big-tuskers/tim-and-craig/index.html
@@ -51,7 +51,7 @@
     <a onclick="preview_tim();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Tim preview, aperçu." class="product-image" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.864.jpg" />
-        <p class="linebreak"><i>Tim</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <p class="linebreak"><i>Tim</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
       </div>
     </a>
@@ -61,7 +61,7 @@
     <a onclick="preview_craig();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Craig preview, aperçu." class="product-image" src="../../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.864.jpg" />
-        <p class="linebreak"><i>Craig</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <p class="linebreak"><i>Craig</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
       </div>
     </a>
