--- a/boutique/medium/1/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/1/last-of-the-big-tuskers/index.html
@@ -51,7 +51,7 @@
     <a onclick="preview_isilo();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Isilo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.1440-864.jpg" />
-        <p class="linebreak"><i>Isilo</i> &ndash; <font class="en">Tembe Elephant Park, South Africa</font><font class="fr">Parc des éléphants de Tembe, Afrique du Sud</font> (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <p class="linebreak"><i>Isilo</i> &ndash; <font class="en">Tembe Elephant Park, South Africa</font><font class="fr">Parc des éléphants de Tembe, Afrique du Sud</font> (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
       </div>
     </a>
@@ -61,7 +61,7 @@
     <a onclick="preview_kamboyo();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Kamboyo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.1440-864.jpg" />
-        <p class="linebreak"><i>Kamboyo</i> &ndash; <font class="en">Tsavo Conservation Area</font><font class="fr">Zone de conservation de Tsavo</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <p class="linebreak"><i>Kamboyo</i> &ndash; <font class="en">Tsavo Conservation Area</font><font class="fr">Zone de conservation de Tsavo</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
       </div>
     </a>
@@ -71,7 +71,7 @@
     <a onclick="preview_masthulele();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Masthulele preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.1440-864.jpg" />
-        <p class="linebreak"><i>Masthulele</i> &ndash; <font class="en">Kruger National Park, South Africa</font><font class="fr">Parc national Kruger, Afrique du Sud</font> (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <p class="linebreak"><i>Masthulele</i> &ndash; <font class="en">Kruger National Park, South Africa</font><font class="fr">Parc national Kruger, Afrique du Sud</font> (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
       </div>
     </a>
@@ -81,7 +81,7 @@
     <a onclick="preview_one_ton();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; One Ton preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.1440-864.jpg" />
-        <p class="linebreak"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <p class="linebreak"><i>One Ton</i> &ndash; Chyulu Hills National Park, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
       </div>
     </a>
@@ -91,7 +91,7 @@
     <a onclick="preview_satao();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Satao preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.1440-864.jpg" />
-        <p class="linebreak"><i>Satao</i> &ndash; <font class="en">Tsavo East National Park</font><font class="fr">Parc national de Tsavo Est</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <p class="linebreak"><i>Satao</i> &ndash; <font class="en">Tsavo East National Park</font><font class="fr">Parc national de Tsavo Est</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
       </div>
     </a>
@@ -101,7 +101,7 @@
     <a onclick="preview_tim();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Tim preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.1440-864.jpg" />
-        <p class="linebreak"><i>Tim</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <p class="linebreak"><i>Tim</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
       </div>
     </a>
@@ -111,7 +111,7 @@
     <a onclick="preview_craig();">
       <div class="text-center">
         <img alt="Last of the Big Tuskers &ndash; Craig preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.1440-864.jpg" />
-        <p class="linebreak"><i>Craig</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>) &copy;&nbsp;Dane&nbsp;Aleksander</p>
+        <p class="linebreak"><i>Craig</i> &ndash; <font class="en">Amboseli National Park</font><font class="fr">Parc national d'Amboseli</font>, Kenya (<font class="en">digital painting</font><font class="fr">&nbsp;peinture numèrique</font>, 2018<font class="fr">&nbsp;</font>)</p>
 
       </div>
     </a>
@@ -122,25 +122,25 @@
       <div class="gutter-small clear-top polyptych ptych-fixed">
 
         <div class="gutter-small">
-          <a onclick="preview_isilo();"><img alt="Last of the Big Tuskers &ndash; Isilo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.c.300-180.jpg" /></a>
+          <a onclick="preview_isilo();"><img alt="Last of the Big Tuskers &ndash; Isilo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.isilo.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_kamboyo();"><img alt="Last of the Big Tuskers &ndash; Kamboyo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.c.300-180.jpg" /></a>
+          <a onclick="preview_kamboyo();"><img alt="Last of the Big Tuskers &ndash; Kamboyo preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.kamboyo.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_masthulele();"><img alt="Last of the Big Tuskers &ndash; Masthulele preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.c.300-180.jpg" /></a>
+          <a onclick="preview_masthulele();"><img alt="Last of the Big Tuskers &ndash; Masthulele preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.masthulele.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_one_ton();"><img alt="Last of the Big Tuskers &ndash; One Ton preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.c.300-180.jpg" /></a>
+          <a onclick="preview_one_ton();"><img alt="Last of the Big Tuskers &ndash; One Ton preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.one-ton.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_satao();"><img alt="Last of the Big Tuskers &ndash; Satao preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.c.300-180.jpg" /></a>
+          <a onclick="preview_satao();"><img alt="Last of the Big Tuskers &ndash; Satao preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.satao.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.300-180.jpg" /></a>
+          <a onclick="preview_tim();"><img alt="Last of the Big Tuskers &ndash; Tim preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.300-180.jpg" /></a>
         </div>
         <div class="gutter-small">
-          <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.300-180.jpg" /></a>
+          <a onclick="preview_craig();"><img alt="Last of the Big Tuskers &ndash; Craig preview, aperçu." class="product-image" src="../../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.300-180.jpg" /></a>
         </div>
       </div>
 
