--- a/c/terms-of-purchase/index.html
+++ b/c/terms-of-purchase/index.html
@@ -90,7 +90,7 @@
           <p class="title">Europe</p>
           <ul class="square">
             <li>France</li>
-            <li>United Kingdom</li>
+            <li>Germany</li>
 
           </ul>
 
@@ -98,6 +98,14 @@
           <ul class="square">
             <li>Canada</li>
             <li>United States of America</li>
+
+          </ul>
+
+          <p class="linebreak title">United Kingdom</p>
+          <ul class="square">
+            <li>England</li>
+            <li>Scotland</li>
+            <li>Wales</li>
 
           </ul>
 
