--- a/boutique/medium/giclee/index.html
+++ b/boutique/medium/giclee/index.html
@@ -118,10 +118,10 @@
           <a href="last-of-the-big-tuskers/tim-and-craig/">
             <div class="clear">
               <div class="gutter-small">
-                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.c.180.jpg" />
+                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.tim.180.jpg" />
               </div>
               <div class="gutter-small">
-                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.c.180.jpg" />
+                <img alt="Last of the Big Tuskers, 2018 &ndash; Tim vignette." src="../../../inc/img/boutique/last-of-the-big-tuskers/lotbt.elephant.craig.180.jpg" />
               </div>
 
             </div>
