--- a/boutique/medium/1/last-of-the-big-tuskers/index.html
+++ b/boutique/medium/1/last-of-the-big-tuskers/index.html
@@ -183,7 +183,7 @@
 
           <p>Dimension: UHD 3840&nbsp;&times;&nbsp;2160 px</p>
           <div class="clear small">
-            <p class="lineend"><font class="en">All included dimensions:</font><font class="fr">Toutes les dimensions incluses&nbsp;:</font> UHD,&nbsp;QHD,&nbsp;HD</p>
+            <p class="lineend"><font class="en">All included dimensions:</font><font class="fr">Toutes les dimensions incluses&nbsp;:</font> HD,&nbsp;QHD,&nbsp;UHD</p>
 
           </div>
 
