--- a/c/terms-of-purchase/index.html
+++ b/c/terms-of-purchase/index.html
@@ -82,7 +82,7 @@
         <p class="linebreak">If You are under eighteen (18) years of age, You may purchase from Animat Boutique only with involvement of a parent or guardian.</p>
 
         <h5 class="linebreak title" id="delivery"><b>2.2</b> Methods of Delivery</h5>
-        <p>Shipping within Canada is included in the list price by default. Additional delivery costs are clearly displayed where International shipping is applicable and are included in the sum total.</p>
+        <p>Shipping within Canada is included in the list price by default. Additional delivery costs are clearly displayed where International shipping is applicable and, when selected, then included in the sum total.</p>
 
         <p class="linebreak">Delivery is limited to the following listed nations.</p>
 
